[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-intel-hub"
version = "0.1.0"
description = "MISP threat intelligence aggregation platform with ta_node push support"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "celery[redis]>=5.3",
  "fastapi>=0.110,<0.116",
  "httpx>=0.27,<0.29",
  "jinja2>=3.1",
  "psycopg[binary]>=3.1",
  "pymisp>=2.4",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "starlette>=0.37,<0.47",
  "uvicorn[standard]>=0.29,<0.35",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "respx>=0.21",
  "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
